# multisig-rust-sdk

./: Cargo.toml  README.md  build.rs
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs  parsers.rs  tx.rs  tx_utils.rs
cli/src/commands/: cap.rs  config.rs  create.rs  currency.rs  deps.rs  intent.rs  mod.rs  owned.rs  package.rs  proposal.rs  user.rs  vault.rs
examples/: approve.rs  build_multisig.rs  command.rs  create_multisig.rs  execute.rs  execute_borrow_cap.rs  get_fees.rs  get_multisig.rs  get_user.rs  request.rs  request_borrow_cap.rs
src/: account.rs  actions.rs  constants.rs  dynamic_fields.rs  fees.rs  intent_type.rs  intents.rs  lib.rs  move_binding.rs  multisig.rs  multisig_builder.rs  owned_objects.rs  params.rs  user.rs  utils.rs
src/assets/: dynamic_fields.rs  mod.rs  owned_objects.rs
src/intents/: intents.rs  mod.rs
src/proposals/: actions.rs  intents.rs
tests/: intent_flow.rs  utils.rs
