[package]
name = "account-multisig-sdk"
description = "Account Multisig SDK"
version = "0.1.0"
authors = ["Thouny <thouny@tuta.io>"]
repository = "https://github.com/account-tech/multisig-rust-sdk/"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"

[workspace]
members = [
    ".",
    "cli"
]

[dependencies]
move-binding-derive = { git = "https://github.com/thounyy/move-binding" }
move-types = { git = "https://github.com/thounyy/move-binding" }

sui-graphql-client = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql-client", rev="71bb8c2" }
sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types", rev="71bb8c2", features = ["serde"] }
sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-transaction-builder", rev="71bb8c2" }

tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
bcs = "0.1.6"
paste = "1.0.15"
cynic = "3.11.0"

[dev-dependencies]
sui-crypto = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-crypto", rev="71bb8c2", features = ["ed25519"] }
base64ct = { version = "1.6", features = ["std"] }
rand = "0.8.0"